# edgecloud

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  _typos.toml  deny.toml  whitepaper.md
.commandcode/taste/: taste.md
.github/workflows/: ci.yml
edge-cli/: Cargo.toml
edge-cli/src/: main.rs  output.rs
edge-cli/src/api/: client.rs  cluster.rs  domains.rs  mod.rs
edge-cli/src/commands/: activate.rs  auth.rs  build.rs  cluster.rs  deploy.rs  deployments.rs  dev.rs  domains.rs  env.rs  init.rs  migrate.rs  mod.rs  open.rs  rollback.rs  status.rs
edge-cli/src/config/: auth.rs  edgetoml.rs  mod.rs
edge-cli/src/migrate/: analyzer.rs  mod.rs  transformer.rs
edge-cli/src/state/: mod.rs
edge-cli/tests/: activate.rs  auth.rs  auto_rollback.rs  logs.rs  open.rs  rollback.rs
edge-config/: Cargo.toml
edge-config/src/: lib.rs
edge-control-plane/: .gitignore  config.yaml  go.mod
edge-control-plane/cmd/api/: main.go  mint.go
edge-control-plane/cmd/api/docs/api/: openapi.yaml
edge-control-plane/docs/api/: openapi.yaml
edge-control-plane/internal/app/: app.go
edge-control-plane/internal/autoscale/: cloud.go  regression_test.go  service.go  service_test.go
edge-control-plane/internal/config/: config.go  config_test.go
edge-control-plane/internal/domain/: api_key.go  app.go  deployment.go  domain.go  migration.go  migration_test.go  tenant.go  worker.go
edge-control-plane/internal/handler/: api_key.go  api_key_test.go  app.go  auth.go  auth_test.go  bootstrap.go  bootstrap_test.go  cluster.go  deployment.go  deployment_activate_test.go  deployment_rollback_test.go  deployment_test.go  domain.go  egress.go  egress_test.go  env.go  internal.go  internal_logs.go  internal_logs_test.go  internal_register_test.go  internal_sync_test.go  internal_test.go  logs.go  logs_test.go  migration.go  migration_test.go  quota.go  tenant.go  tenant_test.go  traffic.go
edge-control-plane/internal/handler/httperror/: httperror.go  maxbody.go
edge-control-plane/internal/middleware/: auth.go  auth_test.go  bootstrap.go  bootstrap_test.go  maxbody.go  maxbody_test.go  ratelimit.go  ratelimit_test.go  tracing.go  worker.go  worker_test.go
edge-control-plane/internal/nats/: publisher.go  publisher_test.go
edge-control-plane/internal/repository/: active_deployment.go  active_deployment_test.go  api_key.go  api_key_test.go  app.go  app_env.go  autoscale_test.go  deployment.go  domain.go  log_entry.go  log_entry_test.go  quota.go  worker.go
edge-control-plane/internal/service/: api_key.go  api_key_test.go  app.go  app_test.go  argon2hash.go  argon2hash_test.go  cluster.go  cluster_test.go  deployment.go  deployment_regions_test.go  deployment_test.go  domain.go  domain_test.go  env.go  env_test.go  hashutil.go  jwtmint.go  log_gc.go  log_gc_test.go  logs_test.go  metrics.go  metrics_test.go  migration.go  migration_test.go  reconcile.go  reconcile_test.go  rollback.go  rollback_test.go  tenant.go  traffic.go  traffic_test.go  wasm.go  wasm_test.go  worker.go  worker_test.go
edge-control-plane/internal/storage/: artifact.go  artifact_test.go  factory.go  remote.go  remote_test.go  s3.go  s3_test.go  storage_test.go
edge-control-plane/migrations/: 004_apps.down.sql  004_apps.up.sql  005_add_last_good.down.sql  005_add_last_good.up.sql  006_api_key_lookup_hash.up.sql  009_add_auto_rollback.down.sql  009_add_auto_rollback.up.sql  009_quotas_used_outbound.down.sql  009_quotas_used_outbound.up.sql  010_domains.up.sql  010_quotas_billing_period.down.sql  010_quotas_billing_period.up.sql
edge-control-plane/scripts/: generate_tsc.sh  openapi_check.go
edge-ingress/: Cargo.toml  README.md
edge-ingress/src/: caddy.rs  config.rs  domains.rs  heartbeats.rs  lib.rs  main.rs  routing.rs  traffic.rs
edge-ingress/tests/: integration.rs
edge-migrate/: Cargo.toml
edge-migrate/docs/: design.md
edge-migrate/docs/adr/: 0001-accept-not-transformable.md
edge-migrate/edge-migrate-bin/: Cargo.toml
edge-migrate/edge-migrate-bin/src/: main.rs  report.rs
edge-migrate/edge-migrate-bin/testdata/rust_tree/src/: main.rs  util.rs
edge-migrate/edge-migrate-bin/tests/: cli_analyze_test.rs  cli_rust_test.rs  cli_transform_json_test.rs  cli_tree_test.rs
edge-migrate/edge-migrate-lib/: Cargo.toml
edge-migrate/edge-migrate-lib/src/: analyzer.rs  lib.rs  patterns.rs  preprocessor.rs  report.rs  rust_analyzer.rs  rust_transformer.rs  transformer.rs  tree.rs
edge-migrate/testdata/: exit.rs  fs_open.rs  http_client.c  http_server.rs  macro_socket.c  udp_bind.rs  wasi_stubs.h
edge-runtime/: Cargo.toml
edge-runtime/src/: egress.rs  engine.rs  lib.rs  limits.rs  linker.rs  memory.rs  metering.rs  runtime.rs  store.rs  streams.rs
edge-runtime/src/interfaces/: cache.rs  dns.rs  filesystem.rs  http_client.rs  http_server.rs  kv_store.rs  mod.rs  networking.rs  observe.rs  process.rs  scheduling.rs  time.rs  websocket.rs
edge-runtime/src/wit/: edge-cloud.wit  edge.wit
edge-runtime/tests/: streaming.rs  v0_2_smoke.rs  wit_validation.rs
edge-spool/src/: lib.rs
edge-test-helpers/: Cargo.toml
edge-test-helpers/src/: lib.rs  nats.rs  supervisor.rs
edge-worker/: Cargo.toml
edge-worker/src/: auth.rs  bootstrap.rs  config.rs  cpu_sample.rs  detect.rs  dispatch.rs  downloader.rs  lib.rs  log_forwarder.rs  main.rs  messages.rs  nats.rs  port_pool.rs  state.rs  supervisor.rs
edge-worker/tests/: ingress_wire_integration.rs  integration_tests.rs  layer_integration.rs  test_fixtures_match_source.rs
edge-worker/tests/fixtures/: README.md  handler.wasm  test-handle.wasm
edge-worker/tests/fixtures/handler/: Cargo.toml
edge-worker/tests/fixtures/handler/src/: lib.rs
