[package]
name = "edge-runtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Wasmtime-based runtime exposing WASI Preview 2 host interfaces for edge computing"

[dependencies]
# Core wasmtime runtime
wasmtime = { version = "25.0", features = ["component-model", "async"] }
wasmtime-wasi = { version = "25.0" }
# WASI HTTP host impls — gives us `WasiHttpView`, `ProxyPre`, and the
# `add_to_linker_async` helper that wires wasi:http/io/clocks/random into
# a `ComponentLinker`. Used in `linker.rs` (C4) and via `ProxyPre` in the
# worker's `dispatch.rs` (C6). Pulls `hyper` transitively.
wasmtime-wasi-http = "25.0"

# Async runtime
tokio = { version = "1.45", features = ["full"], optional = true }

# HTTP types — `WasiHttpView::send_request` takes
# `hyper::Request<HyperOutgoingBody>` and `OutgoingRequestConfig`. The
# trait also exposes `is_forbidden_header(&http::HeaderName)` which we
# override in `runtime.rs` (C3) to strip hop-by-hop headers.
hyper = { version = "1", features = ["client", "http1"] }
http = "1"

# Caching
lru = { version = "0.12", optional = true }
parking_lot = "0.12"

# Metrics
metrics = { version = "0.24", optional = true }

# Base64 encoding for kv-store persistence
base64 = "0.22"

# URL parsing for egress policy
url = "2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
clock = { version = "0.4", optional = true }

[dev-dependencies]
wasmtime-environ = "25.0"
wiremock = "0.6"
wat = "1"
wit-parser = "0.217"
semver = "1"
tempfile = "3"

[features]
# Default features gate only modules that still exist in
# `src/interfaces/`. The v0.2 cleanup dropped `http-client`, `http-server`,
# `networking`, and `dns`; their deps (`reqwest`, `futures`, `bytes`,
# `httparse`, `rustls`, `rustls-pemfile`, `tokio-rustls`, `flate2`,
# `trust-dns-resolver`) are no longer listed.
default = ["kv-store", "cache", "observe", "time", "scheduling", "process"]
kv-store = []
cache = ["dep:lru"]
observe = ["dep:metrics"]
time = ["dep:clock"]
scheduling = ["dep:tokio"]
process = []