[package]
name = "edge-worker"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[lib]
name = "edge_worker"
path = "src/lib.rs"

[dependencies]
async-nats = { version = "0.49", features = ["jetstream", "nkeys"] }
async-trait = "0.1"
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.0"
futures = "0.3"
chrono = "0.4"
edge-runtime = { path = "../edge-runtime" }
wasmtime = { version = "25.0", features = ["component-model", "async"] }
# `ProxyPre<RuntimeState>` for Handler (FaaS) components — see
# `src/dispatch.rs`. Pairs with `wasmtime-wasi-http` in edge-runtime.
wasmtime-wasi-http = "25.0"
sha2 = "0.10"
jsonwebtoken = "9"
uuid = { version = "1.0", features = ["v4"] }

# HTTP server for Handler dispatch (C6). axum hosts the public listener;
# each request drives one `ProxyPre` instance through the guest's
# `wasi:http/incoming-handler` impl. tower-http supplies the body-cap
# middleware (10 MB RequestBodyLimitLayer). http-body-util bridges
# axum's Body and wasmtime-wasi-http's HyperOutgoingBody.
axum = { version = "0.7", features = ["http1"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["limit"] }
http-body-util = "0.1"
# hyper is the underlying HTTP/1 server the wasmtime-wasi-http docs use.
# wasmtime-wasi-http re-exports HyperOutgoingBody but the Request/Response
# types come from hyper directly, so we need a direct dep. Pulled with
# `client` because wasmtime-wasi-http's default_send_request depends on the
# hyper client internals.
hyper = { version = "1", features = ["server", "client", "http1"] }

[dev-dependencies]
tokio-test = "0.4"
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["nats"] }
wiremock = "0.6"
tempfile = "3"
# Cross-wire integration tests exercise the public-ingress contract:
# the worker emits a heartbeat, the ingress parses it and populates its
# routing table. Adding edge-ingress as a dev-dependency lets the test
# directly call `edge_ingress::heartbeats::apply_heartbeat` (the same
# function the NATS subscriber loop drives) without standing up the full
# ingress binary.
edge-ingress = { path = "../edge-ingress" }