[package]
name = "edge-migrate-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = "6"

[dev-dependencies]
